[metadata]
name = cic-tools
version = 0.0.1a3
description = Executable tools for CIC network
author = Louis Holbrook
author_email = dev@holbrook.no
url = https://gitlab.com/grassrootseconomics/cic-tools
keywords =
	cic
	cryptocurrency
	ethereum
	solidarity
	mutual_credit
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Development Status :: 3 - Alpha
	Environment :: Console
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Topic :: Internet
#	Topic :: Blockchain :: EVM
license = GPL3
licence_files =
	LICENSE.txt

[options]
python_requires = >= 3.6
packages = 
	cic_tools.eth
	cic_tools.eth.runnable

[options.entry_points]
console_scripts =
	eth-balance = cic_tools.eth.runnable.balance:main
	eth-checksum = cic_tools.eth.runnable.checksum:main
