[metadata]
name = chainlib
version = 0.0.10a5
description = Generic blockchain access library and tooling
author = Louis Holbrook
author_email = dev@holbrook.no
url = https://gitlab.com/chaintools/chainlib
keywords =
	dlt
	blockchain
	cryptocurrency
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Development Status :: 3 - Alpha
	Environment :: Console
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Topic :: Internet
license = GPL3
licence_files =
	LICENSE.txt


[options]
python_requires = >= 3.6
include_package_data = True
packages = 
	chainlib
	chainlib.cli
